--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,46 +1,43 @@
-# The "Normal" CI for tests and linters and whatnot
-name: Rust CI
-
-# Ci should be run on...
-on:
-  # Every pull request (will need approval for new contributors)
+name: GitHub Actions Demo
+run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+on: 
+  # push:
   pull_request:
-  # Every push to...
-  push:
-    branches:
-      # The main branch
-      - main
-      # Not a thing I use personally but some people like having a release branch
-      - "release/**"
-  # And once a week? 
-  # This can catch things like "rust updated and actually regressed something"
-  schedule:
-    - cron: "11 7 * * 1,4"
-
-# We want all these checks to fail if they spit out warnings
-env:
-  RUSTFLAGS: -Dwarnings
-
 jobs:
-  # Run cargo-vet (taken from the cargo-vet book)
   cargo-vet:
-    name: Vet Dependencies
-    runs-on: ubuntu-latest
-    env:
-      CARGO_VET_VERSION: 0.3.0
-    steps:
-    - uses: actions/checkout@master
-    - name: Install Rust
-      run: rustup update stable && rustup default stable
-    - uses: actions/cache@v2
-      with:
-        path: ${{ runner.tool_cache }}/cargo-vet
-        key: cargo-vet-bin-${{ env.CARGO_VET_VERSION }}
-    - name: Add the tool cache directory to the search path
-      run: echo "${{ runner.tool_cache }}/cargo-vet/bin" >> $GITHUB_PATH
-    - name: Ensure that the tool cache is populated with the cargo-vet binary
-      # Currently patching in a fork
-      run: cargo install --root ${{ runner.tool_cache }}/cargo-vet --version ${{ env.CARGO_VET_VERSION }} --git https://github.com/Gankra/cargo-vet --branch bots cargo-vet
-    - name: Invoke cargo-vet
-      # Currently emitting a custom output
-      run: cargo vet --output-format=json-full
+      name: Vet Dependencies
+      runs-on: ubuntu-latest
+      env:
+        CARGO_VET_VERSION: 0.3.0
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        REPO: ${{ github.repositoryUrl }}
+        PR: ${{ github.event.pull_request.number }}
+      steps:
+      - uses: actions/checkout@master
+      - name: Install Rust
+        run: rustup update stable && rustup default stable
+      - uses: actions/cache@v2
+        with:
+          path: ${{ runner.tool_cache }}/cargo-vet
+          key: cargo-vet-bin-${{ env.CARGO_VET_VERSION }}
+      - name: Add the tool cache directory to the search path
+        run: echo "${{ runner.tool_cache }}/cargo-vet/bin" >> $GITHUB_PATH
+      - name: Ensure that the tool cache is populated with the cargo-vet binary
+        # run: cargo install --root ${{ runner.tool_cache }}/cargo-vet --version ${{ env.CARGO_VET_VERSION }} cargo-vet
+        # Currently patching in a fork
+        run: cargo install --root ${{ runner.tool_cache }}/cargo-vet --version ${{ env.CARGO_VET_VERSION }} --git https://github.com/Gankra/cargo-vet --branch bots cargo-vet
+      - name: Invoke cargo-vet
+        # Currently emitting a custom output
+        run: cargo vet --locked --output-format=json-full > vet-results.json
+        # run: cargo vet --locked --output-format=json > vet-results.json
+      - if: ${{ failure() }}
+        name: Report Failure
+        run: |
+          repo=$(echo ${{ env.REPO }} | sed s,git://github.com/,, | sed s,.git,,)
+          echo $repo
+          cat vet-results.json | jq --arg repo $repo --arg pr ${{ env.PR }} '. + {repo: $repo, pr: $pr}' > vet-results-final.json
+          cat vet-results-final.json
+          cat vet-results-final.json | curl -X POST --data @- https://cargo-vet.axo.dev/api/webhooks/receive
+          
+
+      
