--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
           echo $repo
           cat vet-results.json | jq --arg repo $repo --arg pr ${{ env.PR }} '. + {repo: $repo, pr: $pr}' > vet-results-final.json
           cat vet-results-final.json
-          cat vet-results-final.json | curl -X POST --data @- https://cargo-vet.axo.dev/api/webhooks/receive
+          cat vet-results-final.json | curl -X POST --data @- https://cargo-vet-git-gh-app-axo.vercel.app/api/webhooks/receive
           
 
       
