--- a/.github/workflows/cargo-vet-check-submit-failure.yml
+++ b/.github/workflows/cargo-vet-check-submit-failure.yml
@@ -15,9 +15,9 @@ jobs:
       github.event.workflow_run.event == 'pull_request' &&
       github.event.workflow_run.conclusion == 'failure'
     env:
-      VET_FAILURE_SUBMIT_APP: https://cargo-vet.axo.dev/api/
+      VET_FAILURE_SUBMIT_APP: https://harbor.axo.dev/api/
       VET_FAILURE_SUBMIT_ENDPOINT: webhooks/receive
-      VET_FAILURE_VIEW_ENDPOINT: https://cargo-vet.axo.dev/reports
+      VET_FAILURE_VIEW_ENDPOINT: https://harbor.axo.dev/reports
       VET_RESULTS_FILE: vet-results.json
       PR_NUMBER_FILE: pr-number.txt
       ARTIFACTS_DIR: pr
